antlr/src/main/antlr4/org/apache/iotdb/db/qp/sql/gen/IdentifierParser.java
// Generated from /Users/lly/Documents/SE/Projects/github-community/iotdb/iotdb/antlr/src/main/antlr4/org/apache/iotdb/db/qp/sql/IdentifierParser.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IdentifierParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, ADD=2, AFTER=3, ALIAS=4, ALIGN=5, ALIGNED=6, ALL=7, ALTER=8, ANY=9, 
		APPEND=10, AS=11, ASC=12, ATTRIBUTES=13, BEFORE=14, BEGIN=15, BLOCKED=16, 
		BOUNDARY=17, BY=18, CACHE=19, CHILD=20, CLEAR=21, CLUSTER=22, VARIABLES=23, 
		CONCAT=24, CONDITION=25, CONFIGNODES=26, CONFIGURATION=27, CONTINUOUS=28, 
		COUNT=29, CONTAIN=30, CQ=31, CQS=32, CREATE=33, DATA=34, DATABASE=35, 
		DATABASES=36, DATANODEID=37, DATANODES=38, DEACTIVATE=39, DEBUG=40, DELETE=41, 
		DESC=42, DESCRIBE=43, DETAILS=44, DEVICE=45, DEVICEID=46, DEVICES=47, 
		DISABLE=48, DISCARD=49, DROP=50, ELAPSEDTIME=51, END=52, ENDTIME=53, EVERY=54, 
		EXPLAIN=55, FILL=56, FILE=57, FLUSH=58, FOR=59, FROM=60, FULL=61, FUNCTION=62, 
		FUNCTIONS=63, GLOBAL=64, GRANT=65, GROUP=66, HAVING=67, INDEX=68, INFO=69, 
		INSERT=70, INTO=71, KILL=72, LABEL=73, LAST=74, LATEST=75, LEVEL=76, LIKE=77, 
		LIMIT=78, LINEAR=79, LINK=80, LIST=81, LOAD=82, LOCAL=83, LOCK=84, MERGE=85, 
		METADATA=86, MIGRATE=87, NODEID=88, NODES=89, NONE=90, NOW=91, OF=92, 
		OFF=93, OFFSET=94, ON=95, ORDER=96, ONSUCCESS=97, PARTITION=98, PASSWORD=99, 
		PATHS=100, PIPE=101, PIPES=102, PIPESINK=103, PIPESINKS=104, PIPESINKTYPE=105, 
		POLICY=106, PREVIOUS=107, PREVIOUSUNTILLAST=108, PRIVILEGES=109, PROCESSLIST=110, 
		PROPERTY=111, PRUNE=112, QUERIES=113, QUERY=114, QUERYID=115, RANGE=116, 
		READONLY=117, REGEXP=118, REGION=119, REGIONID=120, REGIONS=121, REMOVE=122, 
		RENAME=123, RESAMPLE=124, RESOURCE=125, REVOKE=126, ROLE=127, ROOT=128, 
		RUNNING=129, SCHEMA=130, SELECT=131, SERIESSLOTID=132, SESSION=133, SET=134, 
		SETTLE=135, SGLEVEL=136, SHOW=137, SLIMIT=138, SOFFSET=139, STORAGE=140, 
		START=141, STARTTIME=142, STATEFUL=143, STATELESS=144, STATEMENT=145, 
		STOP=146, SYSTEM=147, TAGS=148, TASK=149, TEMPLATE=150, TEMPLATES=151, 
		TIME=152, TIMEOUT=153, TIMESERIES=154, TIMESLOTID=155, TIMESTAMP=156, 
		TO=157, TOLERANCE=158, TOP=159, TRACING=160, TRIGGER=161, TRIGGERS=162, 
		TTL=163, UNLINK=164, UNLOAD=165, UNSET=166, UPDATE=167, UPSERT=168, URI=169, 
		USER=170, USING=171, VALUES=172, VARIATION=173, VERIFY=174, VERSION=175, 
		WATERMARK_EMBEDDING=176, WHERE=177, WITH=178, WITHOUT=179, WRITABLE=180, 
		PRIVILEGE_VALUE=181, SET_STORAGE_GROUP=182, DELETE_STORAGE_GROUP=183, 
		CREATE_DATABASE=184, DELETE_DATABASE=185, CREATE_TIMESERIES=186, INSERT_TIMESERIES=187, 
		READ_TIMESERIES=188, DELETE_TIMESERIES=189, ALTER_TIMESERIES=190, CREATE_USER=191, 
		DELETE_USER=192, MODIFY_PASSWORD=193, LIST_USER=194, GRANT_USER_PRIVILEGE=195, 
		REVOKE_USER_PRIVILEGE=196, GRANT_USER_ROLE=197, REVOKE_USER_ROLE=198, 
		CREATE_ROLE=199, DELETE_ROLE=200, LIST_ROLE=201, GRANT_ROLE_PRIVILEGE=202, 
		REVOKE_ROLE_PRIVILEGE=203, CREATE_FUNCTION=204, DROP_FUNCTION=205, CREATE_TRIGGER=206, 
		DROP_TRIGGER=207, START_TRIGGER=208, STOP_TRIGGER=209, CREATE_CONTINUOUS_QUERY=210, 
		DROP_CONTINUOUS_QUERY=211, SHOW_CONTINUOUS_QUERIES=212, SCHEMA_REPLICATION_FACTOR=213, 
		DATA_REPLICATION_FACTOR=214, TIME_PARTITION_INTERVAL=215, SCHEMA_REGION_GROUP_NUM=216, 
		DATA_REGION_GROUP_NUM=217, APPLY_TEMPLATE=218, UPDATE_TEMPLATE=219, READ_TEMPLATE=220, 
		READ_TEMPLATE_APPLICATION=221, MINUS=222, PLUS=223, DIV=224, MOD=225, 
		OPERATOR_DEQ=226, OPERATOR_SEQ=227, OPERATOR_GT=228, OPERATOR_GTE=229, 
		OPERATOR_LT=230, OPERATOR_LTE=231, OPERATOR_NEQ=232, OPERATOR_BETWEEN=233, 
		OPERATOR_IS=234, OPERATOR_IN=235, OPERATOR_AND=236, OPERATOR_OR=237, OPERATOR_NOT=238, 
		OPERATOR_CONTAINS=239, DOT=240, COMMA=241, SEMI=242, STAR=243, DOUBLE_STAR=244, 
		LR_BRACKET=245, RR_BRACKET=246, LS_BRACKET=247, RS_BRACKET=248, DOUBLE_COLON=249, 
		STRING_LITERAL=250, DURATION_LITERAL=251, DATETIME_LITERAL=252, INTEGER_LITERAL=253, 
		EXPONENT_NUM_PART=254, BOOLEAN_LITERAL=255, NULL_LITERAL=256, NAN_LITERAL=257, 
		ID=258, QUOTED_ID=259, AUTO=260, CAST=261, ELSE=262, MODEL=263, MODELS=264, 
		PIPEPLUGIN=265, PIPEPLUGINS=266, QUOTA=267, REPLACE=268, ROUND=269, SPACE=270, 
		SUBSTRING=271, THEN=272, THROTTLE=273, TRAILS=274, VIEW=275, WHEN=276;
	public static final int
		RULE_identifier = 0, RULE_keyWords = 1;
	private static String[] makeRuleNames() {
		return new String[] {
			"identifier", "keyWords"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'-'", "'+'", "'/'", "'%'", "'=='", 
			"'='", "'>'", "'>='", "'<'", "'<='", null, null, null, null, null, null, 
			null, null, "'.'", "','", "';'", "'*'", "'**'", "'('", "')'", "'['", 
			"']'", "'::'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "ADD", "AFTER", "ALIAS", "ALIGN", "ALIGNED", "ALL", "ALTER", 
			"ANY", "APPEND", "AS", "ASC", "ATTRIBUTES", "BEFORE", "BEGIN", "BLOCKED", 
			"BOUNDARY", "BY", "CACHE", "CHILD", "CLEAR", "CLUSTER", "VARIABLES", 
			"CONCAT", "CONDITION", "CONFIGNODES", "CONFIGURATION", "CONTINUOUS", 
			"COUNT", "CONTAIN", "CQ", "CQS", "CREATE", "DATA", "DATABASE", "DATABASES", 
			"DATANODEID", "DATANODES", "DEACTIVATE", "DEBUG", "DELETE", "DESC", "DESCRIBE", 
			"DETAILS", "DEVICE", "DEVICEID", "DEVICES", "DISABLE", "DISCARD", "DROP", 
			"ELAPSEDTIME", "END", "ENDTIME", "EVERY", "EXPLAIN", "FILL", "FILE", 
			"FLUSH", "FOR", "FROM", "FULL", "FUNCTION", "FUNCTIONS", "GLOBAL", "GRANT", 
			"GROUP", "HAVING", "INDEX", "INFO", "INSERT", "INTO", "KILL", "LABEL", 
			"LAST", "LATEST", "LEVEL", "LIKE", "LIMIT", "LINEAR", "LINK", "LIST", 
			"LOAD", "LOCAL", "LOCK", "MERGE", "METADATA", "MIGRATE", "NODEID", "NODES", 
			"NONE", "NOW", "OF", "OFF", "OFFSET", "ON", "ORDER", "ONSUCCESS", "PARTITION", 
			"PASSWORD", "PATHS", "PIPE", "PIPES", "PIPESINK", "PIPESINKS", "PIPESINKTYPE", 
			"POLICY", "PREVIOUS", "PREVIOUSUNTILLAST", "PRIVILEGES", "PROCESSLIST", 
			"PROPERTY", "PRUNE", "QUERIES", "QUERY", "QUERYID", "RANGE", "READONLY", 
			"REGEXP", "REGION", "REGIONID", "REGIONS", "REMOVE", "RENAME", "RESAMPLE", 
			"RESOURCE", "REVOKE", "ROLE", "ROOT", "RUNNING", "SCHEMA", "SELECT", 
			"SERIESSLOTID", "SESSION", "SET", "SETTLE", "SGLEVEL", "SHOW", "SLIMIT", 
			"SOFFSET", "STORAGE", "START", "STARTTIME", "STATEFUL", "STATELESS", 
			"STATEMENT", "STOP", "SYSTEM", "TAGS", "TASK", "TEMPLATE", "TEMPLATES", 
			"TIME", "TIMEOUT", "TIMESERIES", "TIMESLOTID", "TIMESTAMP", "TO", "TOLERANCE", 
			"TOP", "TRACING", "TRIGGER", "TRIGGERS", "TTL", "UNLINK", "UNLOAD", "UNSET", 
			"UPDATE", "UPSERT", "URI", "USER", "USING", "VALUES", "VARIATION", "VERIFY", 
			"VERSION", "WATERMARK_EMBEDDING", "WHERE", "WITH", "WITHOUT", "WRITABLE", 
			"PRIVILEGE_VALUE", "SET_STORAGE_GROUP", "DELETE_STORAGE_GROUP", "CREATE_DATABASE", 
			"DELETE_DATABASE", "CREATE_TIMESERIES", "INSERT_TIMESERIES", "READ_TIMESERIES", 
			"DELETE_TIMESERIES", "ALTER_TIMESERIES", "CREATE_USER", "DELETE_USER", 
			"MODIFY_PASSWORD", "LIST_USER", "GRANT_USER_PRIVILEGE", "REVOKE_USER_PRIVILEGE", 
			"GRANT_USER_ROLE", "REVOKE_USER_ROLE", "CREATE_ROLE", "DELETE_ROLE", 
			"LIST_ROLE", "GRANT_ROLE_PRIVILEGE", "REVOKE_ROLE_PRIVILEGE", "CREATE_FUNCTION", 
			"DROP_FUNCTION", "CREATE_TRIGGER", "DROP_TRIGGER", "START_TRIGGER", "STOP_TRIGGER", 
			"CREATE_CONTINUOUS_QUERY", "DROP_CONTINUOUS_QUERY", "SHOW_CONTINUOUS_QUERIES", 
			"SCHEMA_REPLICATION_FACTOR", "DATA_REPLICATION_FACTOR", "TIME_PARTITION_INTERVAL", 
			"SCHEMA_REGION_GROUP_NUM", "DATA_REGION_GROUP_NUM", "APPLY_TEMPLATE", 
			"UPDATE_TEMPLATE", "READ_TEMPLATE", "READ_TEMPLATE_APPLICATION", "MINUS", 
			"PLUS", "DIV", "MOD", "OPERATOR_DEQ", "OPERATOR_SEQ", "OPERATOR_GT", 
			"OPERATOR_GTE", "OPERATOR_LT", "OPERATOR_LTE", "OPERATOR_NEQ", "OPERATOR_BETWEEN", 
			"OPERATOR_IS", "OPERATOR_IN", "OPERATOR_AND", "OPERATOR_OR", "OPERATOR_NOT", 
			"OPERATOR_CONTAINS", "DOT", "COMMA", "SEMI", "STAR", "DOUBLE_STAR", "LR_BRACKET", 
			"RR_BRACKET", "LS_BRACKET", "RS_BRACKET", "DOUBLE_COLON", "STRING_LITERAL", 
			"DURATION_LITERAL", "DATETIME_LITERAL", "INTEGER_LITERAL", "EXPONENT_NUM_PART", 
			"BOOLEAN_LITERAL", "NULL_LITERAL", "NAN_LITERAL", "ID", "QUOTED_ID", 
			"AUTO", "CAST", "ELSE", "MODEL", "MODELS", "PIPEPLUGIN", "PIPEPLUGINS", 
			"QUOTA", "REPLACE", "ROUND", "SPACE", "SUBSTRING", "THEN", "THROTTLE", 
			"TRAILS", "VIEW", "WHEN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IdentifierParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IdentifierParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class IdentifierContext extends ParserRuleContext {
		public KeyWordsContext keyWords() {
			return getRuleContext(KeyWordsContext.class,0);
		}
		public TerminalNode DURATION_LITERAL() { return getToken(IdentifierParser.DURATION_LITERAL, 0); }
		public TerminalNode ID() { return getToken(IdentifierParser.ID, 0); }
		public TerminalNode QUOTED_ID() { return getToken(IdentifierParser.QUOTED_ID, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdentifierParserListener ) ((IdentifierParserListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdentifierParserListener ) ((IdentifierParserListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IdentifierParserVisitor ) return ((IdentifierParserVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identifier);
		try {
			setState(8);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADD:
			case AFTER:
			case ALIAS:
			case ALIGN:
			case ALIGNED:
			case ALL:
			case ALTER:
			case ANY:
			case APPEND:
			case AS:
			case ASC:
			case ATTRIBUTES:
			case BEFORE:
			case BEGIN:
			case BLOCKED:
			case BOUNDARY:
			case BY:
			case CACHE:
			case CHILD:
			case CLEAR:
			case CLUSTER:
			case CONCAT:
			case CONDITION:
			case CONFIGNODES:
			case CONFIGURATION:
			case CONTINUOUS:
			case COUNT:
			case CONTAIN:
			case CQ:
			case CQS:
			case CREATE:
			case DATA:
			case DATABASE:
			case DATABASES:
			case DATANODEID:
			case DATANODES:
			case DEACTIVATE:
			case DEBUG:
			case DELETE:
			case DESC:
			case DESCRIBE:
			case DETAILS:
			case DEVICE:
			case DEVICEID:
			case DEVICES:
			case DISABLE:
			case DISCARD:
			case DROP:
			case ELAPSEDTIME:
			case END:
			case ENDTIME:
			case EVERY:
			case EXPLAIN:
			case FILL:
			case FILE:
			case FLUSH:
			case FOR:
			case FROM:
			case FULL:
			case FUNCTION:
			case FUNCTIONS:
			case GLOBAL:
			case GRANT:
			case GROUP:
			case HAVING:
			case INDEX:
			case INFO:
			case INSERT:
			case INTO:
			case KILL:
			case LABEL:
			case LAST:
			case LATEST:
			case LEVEL:
			case LIKE:
			case LIMIT:
			case LINEAR:
			case LINK:
			case LIST:
			case LOAD:
			case LOCAL:
			case LOCK:
			case MERGE:
			case METADATA:
			case NODES:
			case NONE:
			case NOW:
			case OF:
			case OFF:
			case OFFSET:
			case ON:
			case ORDER:
			case ONSUCCESS:
			case PARTITION:
			case PASSWORD:
			case PATHS:
			case PIPE:
			case PIPES:
			case PIPESINK:
			case PIPESINKS:
			case PIPESINKTYPE:
			case POLICY:
			case PREVIOUS:
			case PREVIOUSUNTILLAST:
			case PRIVILEGES:
			case PROCESSLIST:
			case PROPERTY:
			case PRUNE:
			case QUERIES:
			case QUERY:
			case QUERYID:
			case RANGE:
			case READONLY:
			case REGEXP:
			case REGIONID:
			case REGIONS:
			case REMOVE:
			case RENAME:
			case RESAMPLE:
			case RESOURCE:
			case REVOKE:
			case ROLE:
			case RUNNING:
			case SCHEMA:
			case SELECT:
			case SERIESSLOTID:
			case SESSION:
			case SET:
			case SETTLE:
			case SGLEVEL:
			case SHOW:
			case SLIMIT:
			case SOFFSET:
			case STORAGE:
			case START:
			case STARTTIME:
			case STATEFUL:
			case STATELESS:
			case STATEMENT:
			case STOP:
			case SYSTEM:
			case TAGS:
			case TASK:
			case TEMPLATE:
			case TIMEOUT:
			case TIMESERIES:
			case TIMESLOTID:
			case TO:
			case TOLERANCE:
			case TOP:
			case TRACING:
			case TRIGGER:
			case TRIGGERS:
			case TTL:
			case UNLINK:
			case UNLOAD:
			case UNSET:
			case UPDATE:
			case UPSERT:
			case URI:
			case USER:
			case USING:
			case VALUES:
			case VARIATION:
			case VERIFY:
			case VERSION:
			case WHERE:
			case WITH:
			case WITHOUT:
			case WRITABLE:
			case PRIVILEGE_VALUE:
			case AUTO:
			case CAST:
			case ELSE:
			case MODEL:
			case MODELS:
			case PIPEPLUGIN:
			case PIPEPLUGINS:
			case QUOTA:
			case REPLACE:
			case ROUND:
			case SPACE:
			case SUBSTRING:
			case THEN:
			case THROTTLE:
			case TRAILS:
			case VIEW:
			case WHEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(4);
				keyWords();
				}
				break;
			case DURATION_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(5);
				match(DURATION_LITERAL);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(6);
				match(ID);
				}
				break;
			case QUOTED_ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(7);
				match(QUOTED_ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyWordsContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(IdentifierParser.ADD, 0); }
		public TerminalNode AFTER() { return getToken(IdentifierParser.AFTER, 0); }
		public TerminalNode ALIAS() { return getToken(IdentifierParser.ALIAS, 0); }
		public TerminalNode ALIGN() { return getToken(IdentifierParser.ALIGN, 0); }
		public TerminalNode ALIGNED() { return getToken(IdentifierParser.ALIGNED, 0); }
		public TerminalNode ALL() { return getToken(IdentifierParser.ALL, 0); }
		public TerminalNode ALTER() { return getToken(IdentifierParser.ALTER, 0); }
		public TerminalNode ANY() { return getToken(IdentifierParser.ANY, 0); }
		public TerminalNode APPEND() { return getToken(IdentifierParser.APPEND, 0); }
		public TerminalNode AS() { return getToken(IdentifierParser.AS, 0); }
		public TerminalNode ASC() { return getToken(IdentifierParser.ASC, 0); }
		public TerminalNode ATTRIBUTES() { return getToken(IdentifierParser.ATTRIBUTES, 0); }
		public TerminalNode AUTO() { return getToken(IdentifierParser.AUTO, 0); }
		public TerminalNode BEFORE() { return getToken(IdentifierParser.BEFORE, 0); }
		public TerminalNode BEGIN() { return getToken(IdentifierParser.BEGIN, 0); }
		public TerminalNode BLOCKED() { return getToken(IdentifierParser.BLOCKED, 0); }
		public TerminalNode BOUNDARY() { return getToken(IdentifierParser.BOUNDARY, 0); }
		public TerminalNode BY() { return getToken(IdentifierParser.BY, 0); }
		public TerminalNode CACHE() { return getToken(IdentifierParser.CACHE, 0); }
		public TerminalNode CAST() { return getToken(IdentifierParser.CAST, 0); }
		public TerminalNode CHILD() { return getToken(IdentifierParser.CHILD, 0); }
		public TerminalNode CLEAR() { return getToken(IdentifierParser.CLEAR, 0); }
		public TerminalNode CLUSTER() { return getToken(IdentifierParser.CLUSTER, 0); }
		public TerminalNode CONCAT() { return getToken(IdentifierParser.CONCAT, 0); }
		public TerminalNode CONDITION() { return getToken(IdentifierParser.CONDITION, 0); }
		public TerminalNode CONFIGNODES() { return getToken(IdentifierParser.CONFIGNODES, 0); }
		public TerminalNode CONFIGURATION() { return getToken(IdentifierParser.CONFIGURATION, 0); }
		public TerminalNode CONTINUOUS() { return getToken(IdentifierParser.CONTINUOUS, 0); }
		public TerminalNode COUNT() { return getToken(IdentifierParser.COUNT, 0); }
		public TerminalNode CONTAIN() { return getToken(IdentifierParser.CONTAIN, 0); }
		public TerminalNode CQ() { return getToken(IdentifierParser.CQ, 0); }
		public TerminalNode CQS() { return getToken(IdentifierParser.CQS, 0); }
		public TerminalNode CREATE() { return getToken(IdentifierParser.CREATE, 0); }
		public TerminalNode DATA() { return getToken(IdentifierParser.DATA, 0); }
		public TerminalNode DATABASE() { return getToken(IdentifierParser.DATABASE, 0); }
		public TerminalNode DATABASES() { return getToken(IdentifierParser.DATABASES, 0); }
		public TerminalNode DATANODEID() { return getToken(IdentifierParser.DATANODEID, 0); }
		public TerminalNode DATANODES() { return getToken(IdentifierParser.DATANODES, 0); }
		public TerminalNode DEACTIVATE() { return getToken(IdentifierParser.DEACTIVATE, 0); }
		public TerminalNode DEBUG() { return getToken(IdentifierParser.DEBUG, 0); }
		public TerminalNode DELETE() { return getToken(IdentifierParser.DELETE, 0); }
		public TerminalNode DESC() { return getToken(IdentifierParser.DESC, 0); }
		public TerminalNode DESCRIBE() { return getToken(IdentifierParser.DESCRIBE, 0); }
		public TerminalNode DEVICE() { return getToken(IdentifierParser.DEVICE, 0); }
		public TerminalNode DEVICEID() { return getToken(IdentifierParser.DEVICEID, 0); }
		public TerminalNode DEVICES() { return getToken(IdentifierParser.DEVICES, 0); }
		public TerminalNode DETAILS() { return getToken(IdentifierParser.DETAILS, 0); }
		public TerminalNode DISABLE() { return getToken(IdentifierParser.DISABLE, 0); }
		public TerminalNode DISCARD() { return getToken(IdentifierParser.DISCARD, 0); }
		public TerminalNode DROP() { return getToken(IdentifierParser.DROP, 0); }
		public TerminalNode ELAPSEDTIME() { return getToken(IdentifierParser.ELAPSEDTIME, 0); }
		public TerminalNode ELSE() { return getToken(IdentifierParser.ELSE, 0); }
		public TerminalNode END() { return getToken(IdentifierParser.END, 0); }
		public TerminalNode ENDTIME() { return getToken(IdentifierParser.ENDTIME, 0); }
		public TerminalNode EVERY() { return getToken(IdentifierParser.EVERY, 0); }
		public TerminalNode EXPLAIN() { return getToken(IdentifierParser.EXPLAIN, 0); }
		public TerminalNode FILL() { return getToken(IdentifierParser.FILL, 0); }
		public TerminalNode FILE() { return getToken(IdentifierParser.FILE, 0); }
		public TerminalNode FLUSH() { return getToken(IdentifierParser.FLUSH, 0); }
		public TerminalNode FOR() { return getToken(IdentifierParser.FOR, 0); }
		public TerminalNode FROM() { return getToken(IdentifierParser.FROM, 0); }
		public TerminalNode FULL() { return getToken(IdentifierParser.FULL, 0); }
		public TerminalNode FUNCTION() { return getToken(IdentifierParser.FUNCTION, 0); }
		public TerminalNode FUNCTIONS() { return getToken(IdentifierParser.FUNCTIONS, 0); }
		public TerminalNode GLOBAL() { return getToken(IdentifierParser.GLOBAL, 0); }
		public TerminalNode GRANT() { return getToken(IdentifierParser.GRANT, 0); }
		public TerminalNode GROUP() { return getToken(IdentifierParser.GROUP, 0); }
		public TerminalNode HAVING() { return getToken(IdentifierParser.HAVING, 0); }
		public TerminalNode INDEX() { return getToken(IdentifierParser.INDEX, 0); }
		public TerminalNode INFO() { return getToken(IdentifierParser.INFO, 0); }
		public TerminalNode INSERT() { return getToken(IdentifierParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(IdentifierParser.INTO, 0); }
		public TerminalNode KILL() { return getToken(IdentifierParser.KILL, 0); }
		public TerminalNode LABEL() { return getToken(IdentifierParser.LABEL, 0); }
		public TerminalNode LAST() { return getToken(IdentifierParser.LAST, 0); }
		public TerminalNode LATEST() { return getToken(IdentifierParser.LATEST, 0); }
		public TerminalNode LEVEL() { return getToken(IdentifierParser.LEVEL, 0); }
		public TerminalNode LIKE() { return getToken(IdentifierParser.LIKE, 0); }
		public TerminalNode LIMIT() { return getToken(IdentifierParser.LIMIT, 0); }
		public TerminalNode LINEAR() { return getToken(IdentifierParser.LINEAR, 0); }
		public TerminalNode LINK() { return getToken(IdentifierParser.LINK, 0); }
		public TerminalNode LIST() { return getToken(IdentifierParser.LIST, 0); }
		public TerminalNode LOAD() { return getToken(IdentifierParser.LOAD, 0); }
		public TerminalNode LOCAL() { return getToken(IdentifierParser.LOCAL, 0); }
		public TerminalNode LOCK() { return getToken(IdentifierParser.LOCK, 0); }
		public TerminalNode MERGE() { return getToken(IdentifierParser.MERGE, 0); }
		public TerminalNode METADATA() { return getToken(IdentifierParser.METADATA, 0); }
